--- a/rootdir/etc/ueventd.qcom.rc
+++ b/rootdir/etc/ueventd.qcom.rc
@@ -268,4 +268,7 @@
 /dev/block/bootdevice/by-name/frp                                  0660   system     system
 /dev/block/platform/soc/624000.ufshc/by-name/frp                   0660   system     system
 
+# Kmsg device
+/dev/kmsg                 0620   root       system
+
 /sys/devices/platform/kcal_ctrl.0/* 0666 system system
