--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -59,7 +59,10 @@
                 android:resource="@drawable/ic_settings_additional_buttons" />
             <meta-data
                 android:name="com.android.settings.category"
-                android:value="com.android.settings.category.device" />
+                android:value="com.android.settings.category.ia.homepage" />
+            <meta-data
+                android:name="com.android.settings.summary"
+                android:resource="@string/buttons_dashboard_summary" />
         </activity>
 
         <activity android:name=".KeyHandler" />
