msm8996-common: Also listen for PRE_BOOT_COMPLETED
*And set priority to 99 for ConfigPanel

--- a/configpanel/AndroidManifest.xml
+++ b/configpanel/AndroidManifest.xml
@@ -68,7 +68,8 @@
         <activity android:name=".KeyHandler" />
 
         <receiver android:name=".Startup" >
-            <intent-filter>
+            <intent-filter android:priority="99" >
+                <action android:name="android.intent.action.PRE_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
