--- a/pocketmode/AndroidManifest.xml
+++ b/pocketmode/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
         <receiver android:name=".Startup" >
             <intent-filter android:priority="99" >
+                <action android:name="android.intent.action.PRE_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
