--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -52,7 +52,7 @@ on boot
     write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "schedutil"
 
     # Enable sched boost
-    write /proc/sys/kernel/sched_boost 1
+    # write /proc/sys/kernel/sched_boost 1
 
     # Set light thermal restrictions while optimizing apps
     # [throttle_freq_LITTLE, throttle_freq_big, throttle_temp, unthrottle_temp]
@@ -76,21 +76,25 @@ on charger
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_setspeed 300000
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
-    write /sys/module/msm_thermal/parameters/enabled "N"
+    #write /sys/module/msm_thermal/parameters/enabled "N"
     start hvdcp_opti
     start thermal-engine
 
 on enable-low-power
 
      # Disable thermal hotplug to switch governor
-    write /sys/module/msm_thermal/core_control/enabled 0
+    #write /sys/module/msm_thermal/core_control/enabled 0
 
     # Set sync wakee policy tunable
     # write /proc/sys/kernel/sched_prefer_sync_wakee_to_waker 1
+    
+    # Disable sched_boost after boot complete
+    write /proc/sys/kernel/sched_boost 0
+    # write /proc/sys/kernel/sched_autogroup_enabled 0
 
     # Enable Adaptive LMK
     # write /sys/module/lowmemorykiller/parameters/enable_adaptive_lmk 1
-    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 81250
+    write /sys/module/lowmemorykiller/parameters/vmpressure_file_min 80640
 
     write /sys/devices/system/cpu/cpu0/online 1
 
@@ -109,12 +113,13 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu2/cpufreq/pwrutilx/iowait_boost_enable 0
 
     write /sys/module/cpu_boost/parameters/input_boost_freq "0:1036800 0:1036800"
-    write /sys/module/cpu_boost/parameters/dynamic_stune_boost 15
+    write /sys/module/cpu_boost/parameters/dynamic_stune_boost 1
     write /sys/module/cpu_boost/parameters/input_boost_ms 100
+    write /sys/module/cpu_boost/parameters/input_boost_enabled 0
 
     # Re-enable thermal hotplug
-    #write /sys/module/msm_thermal/core_control/enabled 0
-    #write /sys/module/msm_thermal/parameters/enabled Y
+    write /sys/module/msm_thermal/core_control/enabled 0
+    write /sys/module/msm_thermal/parameters/enabled Y
 
     # Set thermal restrictions
     write /sys/kernel/msm_thermal/enabled 0
@@ -160,7 +165,7 @@ on enable-low-power
     write /sys/class/kgsl/kgsl-3d0/devfreq/max_clock_mhz 624
     write /sys/class/kgsl/kgsl-3d0/devfreq/max_freq 624000000
 
-    write /sys/module/workqueue/parameters/power_efficient N
+    write /sys/module/workqueue/parameters/power_efficient Y
 
     # update cpusets now that boot is complete and we want better load balancing
     write /dev/cpuset/top-app/cpus 0-3
@@ -172,13 +177,16 @@ on enable-low-power
     # Set swappiness and cache pressure
     write /proc/sys/vm/swappiness 35
     write /proc/sys/vm/vfs_cache_pressure 10
+    write /proc/sys/vm/dirty_ratio 20
+    write /proc/sys/vm/dirty_background_ratio 5
 
-    write /sys/block/dm-0/queue/read_ahead_kb 1024
-    write /sys/block/sda/queue/read_ahead_kb 1024
-    write /sys/block/sde/queue/read_ahead_kb 1024
-    write /sys/block/dm-0/queue/scheduler fiops
-    write /sys/block/sda/queue/scheduler fiops
-    write /sys/block/sde/queue/scheduler fiops
+
+    write /sys/block/dm-0/queue/read_ahead_kb 128
+    write /sys/block/sda/queue/read_ahead_kb 128
+    write /sys/block/sde/queue/read_ahead_kb 128
+    write /sys/block/dm-0/queue/scheduler cfq
+    write /sys/block/sda/queue/scheduler cfq
+    write /sys/block/sde/queue/scheduler cfq
 
     write /sys/module/msm_thermal/core_control/enabled 0
 
@@ -192,7 +200,7 @@ on property:sys.boot_completed=1
     trigger enable-low-power
 
     # Set I/O squeduler
-    setprop sys.io.scheduler "fiops"
+    setprop sys.io.scheduler "cfq"
 
 on property:init.svc.recovery=running
     trigger enable-low-power
